[package]
name = "chemia"
version = "0.1.0"
edition = "2021"
author = "Todd Martin <kj4ntv@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0.97"
simple-home-dir = "0.1.2"
toml = "0.7"
